# trabalho-de-lp

./: .gitignore  Cargo.toml  README.md  SETUP.md  Trunk.toml  index.html  styles.css
frontend/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  styles.css
frontend/src/: main.rs
frontend/src/components/: background_dropdown.rs  color_dropdown.rs  dashboard.rs  font_dropdown.rs  login.rs  mod.rs  note_editor.rs  register.rs
frontend/src/models/: mod.rs  note.rs
frontend/src/services/: auth.rs  mod.rs  notes.rs
notepad-multiusuario/src/: main.rs
notepad-multiusuario/src/components/: dashboard.rs  login.rs  mod.rs  note_editor.rs  register.rs
notepad-multiusuario/src/models/: mod.rs  note.rs
notepad-multiusuario/src/services/: auth.rs  mod.rs  notes.rs
