[package]
name = "notepad-multiusuario"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
gloo-storage = "0.3"

[dependencies.yew-router]
version = "0.18"

[profile.release]
opt-level = "z"
lto = true

[[bin]]
name = "notepad-multiusuario"
path = "src/main.rs"
